# P-PBT

./: .gitignore  README.md  compile.sh  dune-project  eval.sh  kermit.sh  meta-config.json  syn.sh
ast/: abstract_type.ml  ast.ml  common.ml  constant.ml  constructor_declaration.ml  dune  finiteAutomata.ml  inst.ml  item.ml  lit.ml  minterm.ml  nfa.ml  op.ml  pmachine.ml  prop.ml  qregex.ml  regex.ml  sLabel.ml  sevent.ml  strLabel.ml  typectx.ml  typectx.mli  wrapper.ml
backend/: automata.ml  backend.ml  dune  plang.ml
benchmarks/: Library.p
benchmarks/BankServer/: task.ml
benchmarks/ClockBoundFormalModels/: ClockBoundInvariants.p  HeaderSpec.p
benchmarks/DynamoDBReplicationFormalModels/JournalLeaderElection/: JournalMonotonicAndDense.p  ReadConsistency.s
benchmarks/EspressoMachine/: task.ml
benchmarks/FailureDetector/: task.ml
benchmarks/GroverFormalModels/: HeaderSpec.p  RepairLivenessProperties.p  RepairSafetyProperties.p
benchmarks/Kermit2PCModel/: Header.s  ReadVis.p  ReadVis.s  task.ml
benchmarks/MemoryDBCRRConflictResolutionModel/: EventualConsistency.p  EventualConsistency.s  Header.s  HeaderSpec.p  HeaderSpec.s  PHeader.p
benchmarks/S3IndexBrickManagerPModels/: Axiom.p  DeleteConsistency.p  GetConsistency.p  HeaderSpec.p  PutConsistency.p  axiom.s  delete_consistency.s  get_consistency.s  header.s  put_consistency.s
benchmarks/rw/: task.ml
config/: dune  myconfig.ml
dequantified/: cex.ml  dequantified.ml  dune  pautomata.ml  pclientInit.ml  pfa.ml  pover.ml  pprop.ml  qtype.ml  register.ml  world.ml
desymbolic/: desymbolic.ml  dune  head.ml  mapping.ml
dtree/: dt.ml  dune
frontend/: aux.ml  common.ml  dune  front.ml  to_constant.ml  to_expr.ml  to_id.ml  to_inst.ml  to_item.ml  to_lit.ml  to_notation.ml  to_op.ml  to_pat.ml  to_prop.ml  to_qregex.ml  to_regex.ml  to_rty.ml  to_sevent.ml  to_term.ml  to_type_dec.ml
frontendFuncP/: dune  frontFuncP.ml  lexer.mll  parser.mly  past.mli
frontendRegex/: dune.bak  frontSpec.ml  lexer.mll  parser.mly  past.mli
frontendSpec/: dune  frontSpec.ml  lexer.mll  parser.mly  past.mli
frontendWrapper/: dune  lexer.mll  parser.mly  past.mli
instantiate/: dune  instantiate.ml  instantiate.ml.bak  instclient.ml  instspec.ml  typeinst.ml
interpreter/: common.ml  dune  eval.ml  interpreter.ml  runtime.ml
language/: dune  language.ml
ntypecheck/: dune  normal_constant_typing.ml  normal_id_typing.ml  normal_inst_typing.ml  normal_item_typing.ml  normal_lit_typing.ml  normal_op_typing.ml  normal_prop_typing.ml  normal_qregex_typing.ml  normal_regex_typing.ml  normal_rty_typing.ml  normal_sevent_typing.ml
pbackend/: .#dune  ast.ml  astbuilder.ml  dune  fromTerm.ml  toplang.ml
penv/EspressoMachine/PSpec/: Safety.p
penv/EspressoMachine/PSyn/: SynClient.p  SynOrchestrator.p  Wrapper.p
penv/Kermit2PCModel/PSyn/: SynClient.p  SynOrchestrator.p  Wrapper.p
penv/Simplified2PC/PSpec/: Safety.p
penv/Simplified2PC/PSrc/: Coordinator.p  Database.p  EventDecl.p
penv/Simplified2PC/PSyn/: RandomClient.p  SynClient.p  SynOrchestrator.p  Wrapper.p
prover/: dune  litencoding.ml  prover.ml  smtquery.ml  z3aux.ml
ptypecheck/: dune  p_constant_typing.ml  p_expr_typing.ml  p_func_typing.ml  p_id_typing.ml  p_item_typing.ml  p_machine_typing.ml  p_op_typing.ml  p_state_typing.ml  ptypecheck.ml
qcFA/: dune  gen.ml  qcFA.ml
rawdesym/: desymctx.ml  desymeval.ml  dune  rawdesym.ml  satcheck.ml
script/: replace_under_dir.py  run_bench.py
std/lib/: dfa.ml
std/lib_test/: qcheck_tests.ml  regenerate_tests.ml  tests.ml  tests_common.ml
std/src/: re-nfa-command.ml
symExplore/: common.ml  dune  explore.ml  mexplore.ml  mexplore.ml.bak  path.ml  pathTree.ml  simulation.ml  symExplore.ml
synRuntime/automata/: builtin.s
syntax/: basicFA.ml  common.ml  constant.ml  dune  finiteAutomata.ml  inst.ml  item.ml  lit.ml  minterm.ml  nfa.ml  op.ml  plan.ml  pmachine.ml  prop.ml  qregex.ml  regex.ml  sLabel.ml  sevent.ml  srl.ml  strLabel.ml  syntax.ml  typectx.ml  wrapper.ml
synthesis/: abduction.ml  common.ml  dune  gamma.ml  mkTerm.ml  optimize.ml  refine.ml  synthesis.ml
translation/: dune
