(ocamllex
 (modules lexer)
)

(menhir
 (modules parser)
 (flags -lg 1 -la 1 -lc 2)
)

(library
 (name frontFuncP)
 (public_name automata_library.frontFuncP)
 (wrapped true)
 (modules_without_implementation past)
 (modules
   lexer
   parser
   past
   frontFuncP
 )
 (libraries syntax menhirLib core)
)
