(ocamllex
 (modules lexer)
)

(menhir
 (modules parser)
 (flags -lg 1 -la 1 -lc 2)
)

(library
 (name frontSpec)
 (public_name automata_library.frontSpec)
 (wrapped true)
 (modules_without_implementation past)
 (modules
   lexer
   parser
   past
   frontSpec
 )
 (libraries syntax menhirLib core)
)
