(ocamllex
 (modules lexer)
)

(menhir
 (modules parser)
 (flags -lg 1 -la 1 -lc 2)
)

(library
 (name frontWrapper)
 (public_name automata_library.frontWrapper)
 (wrapped true)
 (modules_without_implementation past)
 (modules
   lexer
   parser
   past
   frontWrapper
 )
 (libraries syntax menhirLib core)
)
