(library
 (name ntypecheck)
 (public_name automata_library.ntypecheck)
 (wrapped true)
 (libraries syntax language)
 (modules
  ; normal_constant_typing
  ; normal_id_typing
  ; normal_op_typing
  ; normal_lit_typing
  ; normal_prop_typing
  ; normal_sevent_typing
  ; normal_regex_typing
  normal_item_typing
  ntypecheck
)
(preprocess (pps ppx_here))
)
