(library
 (name ptypecheck)
 (public_name automata_library.ptypecheck)
 (wrapped true)
 (libraries syntax language)
 (modules
  p_constant_typing
  p_id_typing
  p_op_typing
  p_expr_typing
  p_func_typing
  p_state_typing
  p_machine_typing
  p_item_typing
  ptypecheck
 )
 (preprocess (pps ppx_here))
)
